Fix movieCard icon alignment

--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -20,12 +20,12 @@
 .movie-icon-container {
   display: flex;
   justify-content: space-between;
-  padding: 10px 0 0 0;
+  padding: 0 0 5px 0;
 }
 
 .movie-rating-chart {
   height: 50px;
-  padding-top: 5px;
+  padding-top: 12px;
   width: 50px;
 }
 
@@ -62,6 +62,7 @@
 
 .popcorn-icon {
   height: 60px;
+  /*margin-bottom: 10px;*/
 }
 
 .movie-title, 
